testsuite/escript/errors/errors011-multi-line-string.src
var a := "first line
          second line";
print(a);